...
    "edit": "Edit",
    "shuffle": "Shuffle",
    "addTo": "Add to...",
    "createNew": "Create new",
    "connect": "Connect",
    "disconnect": "Disconnect",
    "play": "Play",
    "pause": "Pause",
    "resume": "Resume",
    "error": "Error",
    "search": "Search",
    "home": "Home",
    "back": "Back",
    "settings": "Settings",
    "mute": "Mute",
    "ok": "OK",
    "off": "Off",
    "options": "Options",
    "seasonNumber": "Season ${number}",
    "episodeNumberTitle": "Episode ${number} - ${title}",
    "chapterNumber": "Chapter ${number}",
    "reconnect": "Reconnect",
    "viewAll": "View All",
...
      "skipMarker": "Skip Intro/Credits",
      "screenshot": "Take Screenshot"
    }
  },
  "fileInfo": {
    "title": "File Info",
    "overview": "Overview",
    "video": "Video",
    "audio": "Audio",
    "subtitles": "Subtitles",
    "images": "Embedded Images",
    "dataStreams": "Data Streams",
    "lyrics": "Lyrics",
...
    "nextButton": "Next episode",
    "previousChapterButton": "Previous chapter",
    "nextChapterButton": "Next chapter",
    "muteButton": "Mute",
    "unmuteButton": "Unmute",
    "settingsButton": "Playback Settings",
    "tracksButton": "Audio & Subtitles",
    "chaptersButton": "Chapters",
    "versionQualityButton": "Version & Quality",
    "versionColumnHeader": "Version",
    "qualityColumnHeader": "Quality",
    "qualityOriginal": "Original",
    "qualityPresetLabel": "${resolution}p ${bitrate} Mbps",
...
